--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+@import "leaflet/dist/leaflet.css";
 
 @tailwind base;
 @tailwind components;
@@ -16,5 +17,12 @@
 
   input:focus {
     @apply outline-0;
+  }
+}
+
+@layer components {
+  .leaflet-container {
+    height: 100vh;
+    width: 100%;
   }
 }
