--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
 
 @layer components {
   .leaflet-container {
+    position: relative;
+    z-index: 10;
     height: 100vh;
     width: 100%;
   }
