--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 @layer base {
   html {
     /* 1rem = 18px */
-    font-size: 112.5%;
+    @apply text-[90%] md:text-[95%] lg:text-[112.5%];
   }
 
   body {
